--- a/fonts/style.css
+++ b/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?78tdds');
-  src:  url('fonts/icomoon.eot?78tdds#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?78tdds') format('truetype'),
-    url('fonts/icomoon.woff?78tdds') format('woff'),
-    url('fonts/icomoon.svg?78tdds#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?oskbuo');
+  src:  url('fonts/icomoon.eot?oskbuo#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?oskbuo') format('truetype'),
+    url('fonts/icomoon.woff?oskbuo') format('woff'),
+    url('fonts/icomoon.svg?oskbuo#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,12 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-envelop:before {
-  content: "\e945";
-}
 .icon-mobile:before {
   content: "\e958";
 }
 .icon-user-tie:before {
   content: "\e976";
+}
+.icon-mail2:before {
+  content: "\ea84";
 }
